--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             </div>  
         </div>
         <div class="banner-amazing">
-            <!-- <div class="sponsor">
+            <div class="sponsor">
                 <div>Used by over 1,000,000 people worldwide</div>
                 <div><img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/sponsor/sponsor1.png" alt=""></div>
                 <div><img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/sponsor/sponsor2.png" alt=""></div>
                 <div><img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/sponsor/sponsor3.png" alt=""></div>
                 <div><img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/sponsor/sponsor4.png" alt=""></div>
-            </div> -->
-            <!-- <div class="banner2-img">
+            </div>
+            <div class="banner2-img">
                 <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/bg/amazing-feature-bg.jpg" alt="">
             </div>
             <div class="banner2-shape" >
                 <img src="https://pixner.net/mosto/demo/ltr/dark/assets/css/img/feature-shape.png" alt="">
-            </div> -->
+            </div>
         </div>
         <div class="banner-content">
             <div class="header">
@@ -132,6 +132,9 @@
                     </div>
                 </div>
         </div>
+        <div class="dot1">
+            <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/banner/dot-big.png" alt="">
+        </div>
         <div class="first-body">
             <div class="title">
                 <div>
@@ -142,7 +145,7 @@
                 <div class="title-content">
                     The simple, intuitive and powerful app to manage your work.
                 </div>
-                <div>
+                <div class="title-button">
                     <button>starting using for free</button>
                     <button>explore features</button>
                 </div>
@@ -156,11 +159,31 @@
                         <span>Click Me</span>
                     </div>
                 </div>
+                <div class="narrow">
+                    <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/banner/arrow.png" alt="" style="width: 6vw;">
+                </div>
                 <div class="phone">
                     <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/banner/banner1-1.png" alt="">
                 </div>
             </div>
         </div>
     </div>
+    <div class="second-body">
+        <div class="sb-content">
+            <h3>
+                Explore Amazing Features
+            </h3>
+            <h1>
+                That will boost your productivity
+            </h1>
+            <p>
+                With our wide range of features, you can create a custom app no matter what your niche: restaurant, Realtor, small business, rock band, and all the rest!
+            </p>
+        </div>
+        <!-- <div class="video">
+            <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/fature-video.png" alt="">
+        </div> -->
+    </div>
+    
 </body>
 </html>
