--- a/index.html
+++ b/index.html
@@ -180,10 +180,90 @@
                 With our wide range of features, you can create a custom app no matter what your niche: restaurant, Realtor, small business, rock band, and all the rest!
             </p>
         </div>
-        <!-- <div class="video">
-            <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/fature-video.png" alt="">
-        </div> -->
+        <div class="video">
+            <div>
+                <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/downarrow.png" alt="" style="width: 15%">
+            </div>
+            <div>
+                <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/fature-video.png" alt="">
+            </div>
+        </div>
+        <div class="sb-content2">
+            <h3>
+                A Collection of Prominent Features
+            </h3>
+            <h1>
+                Delivering Exceptional User Experiences.
+            </h1>
+            <p>
+                Numerous features make it possible to customize the system in accordance with all your needs.</p>
+        </div>
     </div>
-    
+    <div class="feature">
+        <div class="feature1">
+            <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/am-fea1.png" alt="">
+        </div>
+        <div class="feature2">
+            <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/am-fea2.png" alt="">
+        </div>
+        <div class="feature3">
+            <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/am-fea3.png" alt="">
+        </div>
+        <div class="feature4">
+            <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/feature/am-fea4.png" alt="">
+        </div>
+    </div>
+    <div class="how">
+        <div class="how-content">
+            <h3>
+                Describe Your App
+            </h3>
+            <h1>
+                Let’s See How It Work
+            </h1>
+            <p>
+                It's easier than you think.Follow 3 simple easy steps</p>
+        </div>
+        <div class="how-item">
+            <div class="how1">
+                <div>
+                    <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/how/how1.png" alt="">
+                </div>
+                <div class="how1-content">
+                    <div>
+                        <button>
+                            Download App
+                        </button>
+                    </div>
+                    <ul>
+                        <li><i class="fa-brands fa-windows"></i></li>
+                        <li><i class="fa-brands fa-apple"></i></li>
+                        <li><i class="fa-brands fa-android"></i></li>
+                    </ul>
+                    <p>Download App either for Windows,Mac or Android</p>
+                </div>
+            </div>
+            <div class="how2">
+                <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/how/how2.png" alt="">
+                <div>
+                    <button>Download App</button>
+                </div>
+                <div>
+
+                </div>
+                <p></p>
+            </div>
+            <div class="how3">
+                <img src="https://pixner.net/mosto/demo/ltr/dark/assets/images/how/how3.png" alt="">
+                <div>
+                    <button>Download App</button>
+                </div>
+                <div>
+
+                </div>
+                <p></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
